Prevents the contents of the language switcher button from collapsing if it has little horizontal space

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -6,6 +6,7 @@
   gap: var(--wp--preset--spacing--40);
   line-height: 1;
   align-items: center;
+  white-space: nowrap;
 
   i {
     line-height: 1;
